# movieassist

./: .gitignore  GITHUB_PROFILE_README.md  README.md  pyproject.toml  requirements.txt
app/: config.py
app/api/: deps.py  main.py  routes.py
app/core/: embeddings.py  llm.py  vector_store.py
frontend/: index.html  script.js  styles.css
movie_recommender_api/: .env.example  .gitignore  main.py  requirements.txt  schemas.py
movie_recommender_api/core/: config.py  prompts.py  rag.py
notebooks/: processing.ipynb
