[tool.poetry]
name = "movieassist"
version = "0.1.0"
description = "Movie assistant RAG project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Core
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"

# API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

# LLM / RAG
openai = "^1.25.2"
pinecone-client = "^4.1.0"
sentence-transformers = "^2.7.0"  # Good for backup/eval
pandas = "^2.2.2"

# Spark / Data
pyspark = {version = "^3.5.1", optional = true}

[tool.poetry.extras]
spark = ["pyspark"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
